force-app/main/default/objects/Growth__c/fields/Ammount__c.field-meta.xml
<CustomField>
    <fullName>Ammount__c</fullName>
    <label>Ammount</label>
    <length>18</length>
    <type>Text</type>
</CustomField>