force-app/main/default/objects/Growth__c/fields/LIC_policies__c.field-meta.xml
<CustomField>
    <fullName>LIC_policies__c</fullName>
    <label>LIC policies</label>
    <referenceTo>LIC_policies__c</referenceTo>
    <relationshipLabel>Growth</relationshipLabel>
    <relationshipName>Growth</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>