force-app/main/default/objects/Growth__c/fields/Years__c.field-meta.xml
<CustomField>
    <fullName>Years__c</fullName>
    <label>Years</label>
    <length>18</length>
    <type>Text</type>
</CustomField>