force-app/main/default/objects/Growth__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LIC_policies__c</columns>
    <columns>Ammount__c</columns>
    <columns>Years__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>